--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -13,7 +13,7 @@ jobs:
     - name: step 1
       run:  |
         echo "event: ${{ github.event_name }}" |
-        echo "os: {{ runner.os }}" |
+        echo "os: ${{ runner.os }}"
         echo "branch: ${{ github.ref }}"
     
     - name: step 2 checkout repo
@@ -21,7 +21,7 @@ jobs:
     
     - name: list files in repo
       run:  |
-        ls ${{ github.workspace }} |
+        ls ${{ github.workspace }}
         pwd
     
     - name: check status
