--- a/.github/workflows/release-artifact.yml
+++ b/.github/workflows/release-artifact.yml
@@ -37,7 +37,7 @@ jobs:
       - name: get changed files in a specific directory
         run:  |
           echo "ARTIFACTS_CHANGES=$(git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} -- artifacts)" >> $GITHUB_ENV
-          echo "IS_ARTIFACTS_CHANGED=$(git diff --quiet ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} -- artifacts || yes)" >> $GITHUB_ENV
+          echo "IS_ARTIFACTS_CHANGED=$(git diff --quiet ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} -- artifacts || echo yes)" >> $GITHUB_ENV
 
       - name: list changed files in a specific directory
         run:  |
