--- a/.github/workflows/release-artifact.yml
+++ b/.github/workflows/release-artifact.yml
@@ -13,6 +13,7 @@ jobs:
 
     env:
       IS_ARTIFACTS_CHANGED: "no"
+      ENV_VAR_FOR_ALL_STEPS_IN_JOB: "blah"
     
     steps:
 
@@ -29,28 +30,47 @@ jobs:
       - name: get changed files
         run:  |
           echo "before: ${{ github.event.pull_request.base.sha }}"
-          echo "after: ${{ github.event.pull_request.head.sha }}"
-          echo "CHANGED_FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }})" >> $GITHUB_ENV
+          echo " after: ${{ github.event.pull_request.head.sha }}"
+          echo "ALL_CHANGES=$(git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }})" >> $GITHUB_ENV
+          echo "IS_ANY_FILE_CHANGED=$(git diff --quiet ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} || echo yes)" >> $GITHUB_ENV
 
       - name: list changed files
         run:  |
           echo "changed files:"
-          echo ${{ env.CHANGED_FILES }}
+          echo ${{ env.ALL_CHANGES }}
+          echo ""
+          echo "are-there-changes-in-repo: ${{ env.IS_ANY_FILE_CHANGED }}"
       
       # we know that ARTIFACTS_CHANGES will have a single file like: "artifacts/gharial_artifact_21_Dec_2021_04_43_56.sh"      
       - name: get changed files in a specific directory
         run:  |
           echo "ARTIFACTS_CHANGES=$(git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} -- artifacts)" >> $GITHUB_ENV
           echo "IS_ARTIFACTS_CHANGED=$(git diff --quiet ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} -- artifacts || echo yes)" >> $GITHUB_ENV
-          
 
       - name: list changed files in a specific directory
         run:  |
-          echo "changed files:"
+          echo "changed files in artifacts:"
           echo ${{ env.ARTIFACTS_CHANGES }}
           echo ""
           echo "are-there-changes-in-artifacts: ${{ env.IS_ARTIFACTS_CHANGED }}"
 
+      # use explicit gh auth login...
+      # - name: merge the PR if there are artifact changes
+      #   if: ${{ env.ARTIFACTS_CHANGES }} == "yes"
+      #   shell: bash
+      #   run:  |
+      #     echo "artifact has changes, merge the PR."
+      #     MERGE_BODY="[GHARIAL-GHA] automatically merging latest PR for artifact"
+      #     echo "MERGE_BODY=$MERGE_BODY"
+      #     PR_URL=${{ github.event.pull_request.html_url }}
+      #     echo "PR_URL=$PR_URL"
+      #     GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
+      #     echo "$GITHUB_TOKEN" | gh auth login --with-token
+      #     gh pr merge $PR_URL --auto --delete-branch --squash --body "$MERGE_BODY"
+      #     GH_PR_MERGE_STATUS=$?
+      #     echo "GH_PR_MERGE_STATUS=$GH_PR_MERGE_STATUS"
+
+      # use implicit gh cli login ?
       - name: merge the PR if there are artifact changes
         if: ${{ env.ARTIFACTS_CHANGES }} == "yes"
         shell: bash
@@ -60,7 +80,10 @@ jobs:
           echo "MERGE_BODY=$MERGE_BODY"
           PR_URL=${{ github.event.pull_request.html_url }}
           echo "PR_URL=$PR_URL"
-          GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
-          echo "$GITHUB_TOKEN" | gh auth login --with-token
           gh pr merge $PR_URL --auto --delete-branch --squash --body "$MERGE_BODY"
+          GH_PR_MERGE_STATUS=$?
+          echo "GH_PR_MERGE_STATUS=$GH_PR_MERGE_STATUS"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
