add some comments on the auto-pr-review stage

--- a/.github/workflows/release-artifact.yml
+++ b/.github/workflows/release-artifact.yml
@@ -55,6 +55,9 @@ jobs:
           echo "are-there-changes-in-artifacts: ${{ env.IS_ARTIFACTS_CHANGED }}"
 
 
+      # seems like we need to be on a branch to approve via gh cli (??)
+      # so, we add a gh pr checkout in the run, before trying to
+      # review with comment or approve
       - name: approve the review if there are artifact changes
         if: ${{ env.ARTIFACTS_CHANGES }} == "yes"
         shell: bash
