--- a/.github/workflows/submodule-updates.yml
+++ b/.github/workflows/submodule-updates.yml
@@ -19,15 +19,21 @@ jobs:
     env:
 
       REPO__CHECKOUT_PATH: 'gharial'
-      REPO__SUBMODULE_PATH: 'gharial/dependabot_sub_a'
+      REPO__TARGET_BRANCH: 'master'
+      REPO__SUBMODULE__REL_PATH: 'dependabot_sub_a'
       REPO__SUBMODULE_SHA1: ''
 
+      SUBMODULE_REPO__OWNER: 'coolbreeze413'
+      SUBMODULE_REPO__NAME: 'dependabot_sub_a'
       SUBMODULE_REPO__CHECKOUT_PATH: 'dependabot_sub_a'
+      SUBMODULE_REPO__TARGET_BRANCH: 'master'
       SUBMODULE_REPO__SHA1: ''
       SUBMODULE_REPO__CHECK_DIR: 'interesting_dir'
 
       SUBDMODULE_REPO__HAS_NEW_CHANGES: 'no'
       SUBDMODULE_REPO__HAS_NEW_CHANGES_IN_CHECK_DIR: 'no'
+
+      REPO__SUBMODULE_UPDATE_PR_BRANCH_NAME: ''
 
 
 
@@ -37,6 +43,7 @@ jobs:
       - name: check out repo
         uses: actions/checkout@v2
         with:
+          ref: ${{ REPO__TARGET_BRANCH }}
           submodules: 'true'
           path: ./${{ env.REPO__CHECKOUT_PATH }}
           fetch-depth: 1 # we only need a shallow clone to get the submodule revision
@@ -44,7 +51,7 @@ jobs:
       # get the revision of the submodule in our repo
       - name: get head rev of submodule in our repo
         run:  |
-          cd ${{ env.REPO__SUBMODULE_PATH }}
+          cd "${{ REPO__CHECKOUT_PATH }}/${{ env.REPO__SUBMODULE__REL_PATH }}"
           echo "repo->submodule: ${PWD}"
           REPO__SUBMODULE_SHA1=$(git rev-parse HEAD)
           echo "REPO__SUBMODULE_SHA1=$REPO__SUBMODULE_SHA1" >> $GITHUB_ENV
@@ -55,7 +62,7 @@ jobs:
       - name: checkout submodule repo
         uses: actions/checkout@v2
         with:
-          repository: coolbreeze413/dependabot_sub_a
+          repository: ${{ SUBMODULE_REPO__OWNER }}/${{ SUBMODULE_REPO__NAME }}
           path: ./${{ env.SUBMODULE_REPO__CHECKOUT_PATH }}
           fetch-depth: 0 # we need all history, not a shallow clone for checking changes
 
@@ -72,7 +79,7 @@ jobs:
       # are there any differences between submodule repo HEAD and our repo submodule rev
       - name: check if submodule repo has new changes
         if:  ${{ env.SUBMODULE_REPO__SHA1 }} != ${{ env.REPO__SUBMODULE_SHA1 }}
-        run: |
+        run:  |
           SUBDMODULE_REPO__HAS_NEW_CHANGES="yes"
           echo "SUBDMODULE_REPO__HAS_NEW_CHANGES=$SUBDMODULE_REPO__HAS_NEW_CHANGES" >> $GITHUB_ENV
           echo "SUBDMODULE_REPO__HAS_NEW_CHANGES=$SUBDMODULE_REPO__HAS_NEW_CHANGES"
@@ -81,7 +88,7 @@ jobs:
       # are there differences in a specific dir in the submodule repo
       - name: check if there are changes in the specific dir that we are looking for
         if: ${{ env.SUBDMODULE_REPO__HAS_NEW_CHANGES }} == 'yes'
-        run: |
+        run:  |
           cd ${{ env.SUBMODULE_REPO__CHECKOUT_PATH }}
           echo "submodule's repo : ${PWD}"
           CHANGES=$(git diff --name-only ${{ env.REPO__SUBMODULE_SHA1 }}..${{ env.SUBMODULE_REPO__SHA1 }})
@@ -90,6 +97,43 @@ jobs:
           SUBDMODULE_REPO__HAS_NEW_CHANGES_IN_CHECK_DIR=$(git diff --quiet ${{ env.REPO__SUBMODULE_SHA1 }}..${{ env.SUBMODULE_REPO__SHA1 }} -- ${{ env.SUBMODULE_REPO__CHECK_DIR }} || echo yes)
           echo "SUBDMODULE_REPO__HAS_NEW_CHANGES_IN_CHECK_DIR=$SUBDMODULE_REPO__HAS_NEW_CHANGES_IN_CHECK_DIR" >> $GITHUB_ENV
           echo "SUBDMODULE_REPO__HAS_NEW_CHANGES_IN_CHECK_DIR=$SUBDMODULE_REPO__HAS_NEW_CHANGES_IN_CHECK_DIR"
+
+      # if we have the interesting differences, create a PR with submodule updates
+      - name: create PR if changes in specific dir of submodule-updates
+        if: ${{ env.SUBDMODULE_REPO__HAS_NEW_CHANGES_IN_CHECK_DIR }} == 'yes'
+        uses: actions/checkout@v2
+        with:
+          submodules: 'true'
+          path: ./${{ env.REPO__CHECKOUT_PATH }} # using the same path as before, overwrites?
+          fetch-depth: 0 # we need a full clone to update submodule rev (is this true?)
+        run:  |
+          REPO__SUBMODULE_UPDATE_PR_BRANCH_NAME="GHARIAL-${{ SUBMODULE_REPO__NAME }}-${{ env.SUBMODULE_REPO__SHA1 }}"
+          REPO__SUBMODULE_UPDATE_PR_TITLE="[GHARIAL] bump submodule ${{ SUBMODULE_REPO__NAME }} from ${{ env.REPO__SUBMODULE_SHA1 }} to ${{ env.SUBMODULE_REPO__SHA1 }}"
+          cd ${{ env.SUBMODULE_REPO__CHECKOUT_PATH }}
+          git checkout ${{ env.REPO__TARGET_BRANCH }}
+          git checkout -b "$REPO__SUBMODULE_UPDATE_PR_BRANCH_NAME"
+          cd ${{ env.REPO__SUBMODULE__REL_PATH }}
+          git checkout ${{ env.SUBMODULE_REPO__TARGET_BRANCH }}
+          git pull
+          cd ..
+          git add ${{ env.REPO__SUBMODULE__REL_PATH }}
+          git commit -m "$REPO__SUBMODULE_UPDATE_PR_TITLE"
+          git push -u origin "$REPO__SUBMODULE_UPDATE_PR_BRANCH_NAME"
+          PR_BODY="Add some more details here?"
+          PR_URL=$(gh pr create --title "$REPO__SUBMODULE_UPDATE_PR_TITLE" \
+             --body "$PR_BODY" \
+             --head "$REPO__SUBMODULE_UPDATE_PR_BRANCH_NAME" \
+             --base "${{ env.REPO__TARGET_BRANCH }}" \
+             )
+          PR_STATUS=$?
+          echo "PR_STATUS=$PR_STATUS"
+          echo "PR_URL=$PR_URL"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+
+
 
           
 
