fix PR creation step, move to short SHA1

--- a/.github/workflows/submodule-updates.yml
+++ b/.github/workflows/submodule-updates.yml
@@ -53,7 +53,7 @@ jobs:
         run:  |
           cd "${{ REPO__CHECKOUT_PATH }}/${{ env.REPO__SUBMODULE__REL_PATH }}"
           echo "repo->submodule: ${PWD}"
-          REPO__SUBMODULE_SHA1=$(git rev-parse HEAD)
+          REPO__SUBMODULE_SHA1=$(git rev-parse --short HEAD)
           echo "REPO__SUBMODULE_SHA1=$REPO__SUBMODULE_SHA1" >> $GITHUB_ENV
           echo "REPO__SUBMODULE_SHA1=$REPO__SUBMODULE_SHA1"
           cd -
@@ -71,7 +71,7 @@ jobs:
         run:  |
           cd ${{ env.SUBMODULE_REPO__CHECKOUT_PATH }}
           echo "submodule's repo : ${PWD}"
-          SUBMODULE_REPO__SHA1=$(git rev-parse HEAD)
+          SUBMODULE_REPO__SHA1=$(git rev-parse --short HEAD)
           echo "SUBMODULE_REPO__SHA1=$SUBMODULE_REPO__SHA1" >> $GITHUB_ENV
           echo "SUBMODULE_REPO__SHA1=$SUBMODULE_REPO__SHA1"
           cd -
@@ -99,13 +99,16 @@ jobs:
           echo "SUBDMODULE_REPO__HAS_NEW_CHANGES_IN_CHECK_DIR=$SUBDMODULE_REPO__HAS_NEW_CHANGES_IN_CHECK_DIR"
 
       # if we have the interesting differences, create a PR with submodule updates
-      - name: create PR if changes in specific dir of submodule-updates
+      - name: full checkout of repo if changes in specific dir of submodule to create PR
         if: ${{ env.SUBDMODULE_REPO__HAS_NEW_CHANGES_IN_CHECK_DIR }} == 'yes'
         uses: actions/checkout@v2
         with:
           submodules: 'true'
           path: ./${{ env.REPO__CHECKOUT_PATH }} # using the same path as before, overwrites?
           fetch-depth: 0 # we need a full clone to update submodule rev (is this true?)
+
+      - name: create PR if changes in specific dir of submodule
+        if: ${{ env.SUBDMODULE_REPO__HAS_NEW_CHANGES_IN_CHECK_DIR }} == 'yes'
         run:  |
           REPO__SUBMODULE_UPDATE_PR_BRANCH_NAME="GHARIAL-${{ SUBMODULE_REPO__NAME }}-${{ env.SUBMODULE_REPO__SHA1 }}"
           REPO__SUBMODULE_UPDATE_PR_TITLE="[GHARIAL] bump submodule ${{ SUBMODULE_REPO__NAME }} from ${{ env.REPO__SUBMODULE_SHA1 }} to ${{ env.SUBMODULE_REPO__SHA1 }}"
