--- a/.github/workflows/submodule-updates.yml
+++ b/.github/workflows/submodule-updates.yml
@@ -112,6 +112,7 @@ jobs:
         run:  |
           REPO__SUBMODULE_UPDATE_PR_BRANCH_NAME="GHARIAL-${{ env.SUBMODULE_REPO__NAME }}-${{ env.SUBMODULE_REPO__SHA1 }}"
           REPO__SUBMODULE_UPDATE_PR_TITLE="[GHARIAL] bump submodule ${{ env.SUBMODULE_REPO__NAME }} from ${{ env.REPO__SUBMODULE_SHA1 }} to ${{ env.SUBMODULE_REPO__SHA1 }}"
+          cd ${{ env.REPO__CHECKOUT_PATH }}
           git checkout ${{ env.REPO__TARGET_BRANCH }}
           git checkout -b "$REPO__SUBMODULE_UPDATE_PR_BRANCH_NAME"
           cd ${{ env.REPO__SUBMODULE__REL_PATH }}
