--- a/.github/workflows/submodule-updates.yml
+++ b/.github/workflows/submodule-updates.yml
@@ -115,7 +115,7 @@ jobs:
           cd ${{ env.REPO__CHECKOUT_PATH }}
           git checkout ${{ env.REPO__TARGET_BRANCH }}
           git pull
-          git config user.name "GHARIAL"
+          git config user.name "coolbreeze413"
           git config user.email "<>"
           git checkout -b "$REPO__SUBMODULE_UPDATE_PR_BRANCH_NAME"
           cd ${{ env.REPO__SUBMODULE__REL_PATH }}
