add prev PR exists check to gha

--- a/.github/workflows/submodule-updates.yml
+++ b/.github/workflows/submodule-updates.yml
@@ -34,6 +34,7 @@ jobs:
       SUBDMODULE_REPO__HAS_NEW_CHANGES_IN_CHECK_DIR: 'no'
 
       REPO__SUBMODULE_UPDATE_PR_BRANCH_NAME: ''
+      REPO__SUBMODULE_UPDATE_PR_CREATE: 'no'
 
 
 
@@ -98,12 +99,29 @@ jobs:
           echo "SUBDMODULE_REPO__HAS_NEW_CHANGES_IN_CHECK_DIR=$SUBDMODULE_REPO__HAS_NEW_CHANGES_IN_CHECK_DIR" >> $GITHUB_ENV
           echo "SUBDMODULE_REPO__HAS_NEW_CHANGES_IN_CHECK_DIR=$SUBDMODULE_REPO__HAS_NEW_CHANGES_IN_CHECK_DIR"
 
-      # check if there is already a PR with the same change pending?
+      # check if there is already a PR with the same change pending (PR is open)
+      # also, if PR is closed, then it means that it was closed by someone ( should we ignore this change then?)
+      # if PR is merged, we wouldn't be here
+      - name: check if PR already exists for the same submodule rev update
+        if: ${{ env.SUBDMODULE_REPO__HAS_NEW_CHANGES_IN_CHECK_DIR == 'yes' }}
+        run:  |
+          cd ${{ env.REPO__CHECKOUT_PATH }}
+          REPO__SUBMODULE_UPDATE_PR_TITLE="[GHARIAL] bump submodule ${{ env.SUBMODULE_REPO__NAME }} from ${{ env.REPO__SUBMODULE_SHA1 }} to ${{ env.SUBMODULE_REPO__SHA1 }}"
+          PR_NUM=$(gh pr list --search "$REPO__SUBMODULE_UPDATE_PR_TITLE" --state open --json number --jq '.[] | .number')
+          if [ ! -z $PR_NUM ] ; then
+            echo "PR already exists for the same submodule update: $PR_NUM"
+          else
+            REPO__SUBMODULE_UPDATE_PR_CREATE='yes'
+            echo "REPO__SUBMODULE_UPDATE_PR_CREATE=$REPO__SUBMODULE_UPDATE_PR_CREATE" >> $GITHUB_ENV
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       # check if there is a PR for an older revision, if so supersede with a new PR.
 
       # if we have the interesting differences, create a PR with submodule updates
       - name: full checkout of repo if changes in specific dir of submodule to create PR
-        if: ${{ env.SUBDMODULE_REPO__HAS_NEW_CHANGES_IN_CHECK_DIR == 'yes' }}
+        if: ${{ env.REPO__SUBMODULE_UPDATE_PR_CREATE == 'yes' }}
         uses: actions/checkout@v2
         with:
           submodules: 'true'
@@ -111,9 +129,8 @@ jobs:
           fetch-depth: 0 # we need a full clone to update submodule rev (is this true?)
 
       - name: create PR if changes in specific dir of submodule
-        if: ${{ env.SUBDMODULE_REPO__HAS_NEW_CHANGES_IN_CHECK_DIR == 'yes' }}
+        if: ${{ env.REPO__SUBMODULE_UPDATE_PR_CREATE == 'yes' }}
         run:  |
-          echo "${{ env.SUBDMODULE_REPO__HAS_NEW_CHANGES_IN_CHECK_DIR }}"
           REPO__SUBMODULE_UPDATE_PR_BRANCH_NAME="GHARIAL-${{ env.SUBMODULE_REPO__NAME }}-${{ env.SUBMODULE_REPO__SHA1 }}"
           REPO__SUBMODULE_UPDATE_PR_TITLE="[GHARIAL] bump submodule ${{ env.SUBMODULE_REPO__NAME }} from ${{ env.REPO__SUBMODULE_SHA1 }} to ${{ env.SUBMODULE_REPO__SHA1 }}"
           cd ${{ env.REPO__CHECKOUT_PATH }}
