--- a/.github/workflows/submodule-updates.yml
+++ b/.github/workflows/submodule-updates.yml
@@ -131,6 +131,7 @@ jobs:
       - name: create PR if changes in specific dir of submodule
         if: ${{ env.REPO__SUBMODULE_UPDATE_PR_CREATE == 'yes' }}
         run:  |
+          echo "${{ env.REPO__SUBMODULE_UPDATE_PR_CREATE }}"
           REPO__SUBMODULE_UPDATE_PR_BRANCH_NAME="GHARIAL-${{ env.SUBMODULE_REPO__NAME }}-${{ env.SUBMODULE_REPO__SHA1 }}"
           REPO__SUBMODULE_UPDATE_PR_TITLE="[GHARIAL] bump submodule ${{ env.SUBMODULE_REPO__NAME }} from ${{ env.REPO__SUBMODULE_SHA1 }} to ${{ env.SUBMODULE_REPO__SHA1 }}"
           cd ${{ env.REPO__CHECKOUT_PATH }}
